gcc/testsuite/rust.test/fail_compilation/implicit_returns_err2.rs
fn test(x: i32) -> i32 {
    return 1;
    true
}

fn main() {
    let a = test(1);
}
